# Owl

./: Dockerfile  LICENSE  Makefile  README.md
example/: Makefile
example/crypt-examples/libgpucrypto/: .gitignore  Makefile  Makefile.in  README  README.md  aes_context.cc  bn_kn.cu  bn_kn.h  cuda_mem_pool.cc  device_context.cc  mp_modexp.h  mp_modexp_gpu.cu  mp_modexp_gputest.cu  pinned_mem_pool.cc  rsa_context_mp.cc  rsa_context_mp.hh  rsa_cuda.cu  sha_context.cc
example/crypt-examples/libgpucrypto/inc/: cutil_inline.h
example/cuda-examples/: Makefile  cmds  randaccess.cu
experiment/: mem_tracker  report_parser  src_parser
src/: owl-wrapper
src/owl_analyzer/: .gitignore  Cargo.toml
src/owl_analyzer/analyzer/: Cargo.toml
src/owl_analyzer/analyzer/src/: align.rs  alloc.rs  dcfg.rs  dtest.rs  evidence.rs  hist.rs  kernel.rs  lib.rs  matrix.rs  memory.rs  merge.rs  myers_diff.rs  report.rs  trace.rs
src/owl_analyzer/monitor/: Cargo.toml
src/owl_analyzer/monitor/src/: acceptor.rs  cuda.rs  lib.rs  raw.rs
src/owl_analyzer/src/: main.rs
src/owl_analyzer/tdcfg/: Cargo.toml
src/owl_analyzer/tdcfg/src/: lib.rs
src/owl_monitor/core/: nvbit.h
src/owl_monitor/cpu_trace/: cpu_trace.cpp  makefile  makefile.rules  sender.hpp
src/owl_monitor/gpu_trace/: Makefile  bt.cpp  bt.hpp  cfg.cpp  cfg.hpp  device_trace.cu  dump.cpp  dump.hpp  gpu_trace.cu
src/owls_monitor/: Makefile
src/owls_monitor/cpu_trace/: cpu_trace.cpp  debug.h  sender.hpp  shm.hpp
src/owls_monitor/gpu_trace/: bt.cpp  bt.hpp  device_trace.cu  dump.cpp  dump.hpp  gpu_trace.cu
(+59 files in other folders)
