[package]
name = "owl_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
# cuda = { path = "cuda" }
monitor = { path = "monitor" }
analyzer = { path = "analyzer" }
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.31.0", features = ["full"] }
serde_json = "1.0.105"