[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
monitor = { path = "../monitor" }
ndarray = "0.15.6"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
serde_json = "1.0.107"
